--- a/trunk/netpanzer/README
+++ b/trunk/netpanzer/README
@@ -38,8 +38,8 @@ building it. Here's a list of them:
 * normal gnu compiler and additional tools (g++ version 3.2 or later is
   required at the moment)
 
-* perforce jam 2.5 or later (used as build tool)
-  ftp://ftp.perforce.com/pub/jam
+* SCons build tool
+  http://www.scons.org/
 
 * SDL 1.2.5 or later
   http://www.libsdl.org
@@ -50,35 +50,106 @@ building it. Here's a list of them:
 Thanks to all the authors of these helpful libraries that made our development
 easy and straightforward.
 
-2.2 Building
+2.2 Building without installing on non Windows
 
-To build and install the game use the following commands:
+To build the game and run as normal user do the following:
 
-./configure
-jam
- (You probably need to be root for the installation, so using "su" is a good
-  idea here)
-jam install
+# scons
 
-The configure script also lets you set some more options like the installation
-directory (--prefix argument). You'll get a full list of these if you invoke
-"configure --help". The game should be installed now.
+When scons finish without errors the game is ready to play, type this:
 
-2.3 Music
+# ./netpanzer
+
+Remember that next time you want to play you have to go to the same folder where
+you compiled and type './netpanzer'
+
+2.3 Building on Windows
+
+Building on windows is a little bit more complicated, developers shouldn't have
+any big problem.
+
+MinGW should be installed in C:\mingw
+
+Get the development libraries of SDL for mingw32, copy the include directory to
+C:\mingw\include\SDL so you have the file "C:\mingw\include\SDL\SDL.h", and the
+lib folder to C:\mingw\lib
+
+Get SDL_mixer development libraries for VC8, copy the header file to
+C:\mingw\include\SDL and the .lib file to c:\mingw\lib
+
+Python and scons should be installed and working.
+
+To compile netpanzer run scons on the folder where you have the netpanzer source
+code:
+
+C:\Some\Folder\With\Netpanzer> scons
+
+After scons finish without errors you have to copy all the .DLL files from SDL
+and from SDL_mixer to the netpanzer folder.
+
+To run you can type 'netpanzer' or click on the netpanzer.exe file in explorer.
+
+2.4 Building for distribution on non Windows operating systems
+
+If you plan to distribute NetPanzer for installation (on Linux systems, for example)
+there are some extra steps to be taken care.
+
+NetPanzer needs to know where the data files will be stored when the game runs. To
+set this data you have to add the parameter "datadir=/some/dir/" at compile time
+and NetPanzer will look there for its data files. Example:
+
+# scons datadir=/usr/local/games/netpanzer
+
+Using the sample line, after NetPanzer is built, it will look in /usr/local/games/netpanzer
+for it's data files.
+
+For versioning, there is a file called "RELEASE_VERSION", the first line on that file will
+be the version that NetPanzer will show. You can use that file to change the version of
+the game shown. You should modify the file before compilation.
+
+Actually there is no install script, you will have to prepare the script by yourself.
+The installation is actually easy, and you only have to copy several files. The following
+directories should be copied on the "datadir" destination:
+- cache/
+- fonts/
+- maps/
+- pics/
+- powerups/
+- scripts/
+- sound/
+- units/
+- wads/
+
+If you want to copy some documentation, the "doc" folder has it. There is also the BUGS,
+COPYING, ChangeLog, README (this file), RELNOTES and TODO.
+
+"netpanzer.desktop" is a sample file for using on desktop systems.
+
+"netpanzer.png" and "netpanzer.xpm" are some sample icons to be use with the game.
+
+And of course, the file "netpanzer" is the main binary that should be on the PATH.
+
+2.5 Music
 
 Netpanzer doesn't come with own musicfiles yet. However you can place your
 favourite .mp3, .ogg or .mod files into the sound/music directory and netpanzer
 will play these in random order while you play.
 
-2.4 Starting the game
+2.6 Starting the game
 
-You can start the game by typing
+You can start the game in several ways:
 
-netpanzer
+If you compiled yourself NetPanzer (and didn't install), first "cd" to the folder where
+you compiled it and type:
+# ./netpanzer
 
-Note that on first startup the game needs some time to precalculate some data.
-This might take up to 5 minutes. So just wait a bit when you have a black
-screen.
+If NetPanzer was installed and is in the PATH, type
+# netpanzer
+
+It is possible that in your distribution NetPanzer was installed and has a menu item,
+if that is the case, just click on the item.
+
+On Windows, you can click on the "netpanzer.exe" file.
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -90,6 +161,8 @@ keys and in general trust your intuition :)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 4. Dedicated Server and Configuration Files
+
+Note: This has to be reviewed.
 
 You can start a dedicated netpanzer server (a pure server, without any video
 output). By starting netpanzer with the -d commandline option.
@@ -163,7 +236,12 @@ the server section of the file:
 
 5. Bot Players
 
--- this has to change for new mode --
+Bot players can be spawn only on the dedicated server. To do that enter the 
+server console and type:
+> addbot
+
+A new bot will appear on the game. Type help on the server console for more
+info and commands.
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
