--- a/tags/netpanzer/0.8.3/ChangeLog
+++ b/tags/netpanzer/0.8.3/ChangeLog
@@ -1,3 +1,5 @@
+NOTE: I stopped writting this long ago, use the svn log to see the changes, this is double work.
+
 04-May-2008 by Aaron Perez
 - Deleted AbstractButton
 - Deleted the classes for each unit type, only use Vehicle now.
